# myhousehold

./: .env.example  .gitignore  Makefile  README.md  compose.yaml  inst.py  pyproject.toml
python/: .env.example  Dockerfile  alembic-entrypoint.sh  alembic.ini  pyproject.toml
python/src/myhousehold/alembic/: env.py
python/src/myhousehold/alembic/versions/: 2bedc9f1a2ef_initial.py  f5cfebb271c7_initial.py
python/src/myhousehold/core/: __init__.py  exceptions.py  providers.py
python/src/myhousehold/core/models/: __init__.py  login_session.py  proposition.py  stream.py  stream_entry.py  user.py
python/src/myhousehold/core/models/intents/: base.py  project.py  record.py
python/src/myhousehold/core/services/: access.py  providers.py  streams.py  uow_ctl.py
python/src/myhousehold/integration_tests/: api_templates.py  base.py  test_streams.py
python/src/myhousehold/reasoners/: base.py  protein_goal.py
python/src/myhousehold/server/: exception_handlers.py  providers.py
python/src/myhousehold/server/main/: run_rest_server.py
python/src/myhousehold/server/models/: config.py
python/src/myhousehold/server/routers/: __init__.py  access.py  streams.py
python/src/myhousehold/server/schemas/: streams.py
src/myhousehold/: mental_set.py  object.py  providers.py  universal_set.py
