[project]
name = "myhousehold"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dishka",
    "sqlalchemy",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "psycopg[binary]",
    "alembic",
    "ruff",
    "pytest",
    "requests",
    "deepdiff",
    "authx",
    "argon2-cffi",
    "jsonschema (>=4.25.0,<5.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[project.scripts]
run-rest-server = "myhousehold.server.main.run_rest_server:main"

[tool.ruff]
line-length = 79
extend-exclude = ["alembic"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
